arreglo de podcast, informe. registro error

--- a/src/app/v2/modules/informe/informe.component.html
+++ b/src/app/v2/modules/informe/informe.component.html
@@ -6,8 +6,8 @@
   <!-- Sección de búsqueda y resultados -->
   <div class="w-full lg:w-3/4 pr8 p-8">
     <!-- Header -->
-    <header>
-      <div class="container mx-auto py-4">
+    <header class="mb-12">
+      <div class="mx-auto py-4">
         <h1 class="text-gray text-3xl font-bold">
           Informe sobre la Industria 4.0 en la Región de Los Lagos
         </h1>
@@ -19,7 +19,7 @@
     <!-- Sección: Introducción -->
     <section class="mb-12">
       <div class="bg-white py-2">
-        <h2 class="text-3xl font-bold text-gray-800 mb-6">Introducción</h2>
+        <h2 class="text-2xl font-bold text-gray-800 mb-6">Introducción</h2>
         <p class="text-gray-700 leading-relaxed text-justify">
           Este informe, elaborado junto a <strong>CORFO</strong>,
           <strong>ASIMET</strong>, la
@@ -37,7 +37,7 @@
     <!-- Sección: Brechas en la Adopción de Tecnologías 4.0 -->
     <section class="mb-12">
       <div class="bg-white py-2">
-        <h2 class="text-3xl font-bold text-gray-800 mb-6">
+        <h2 class="text-2xl font-bold text-gray-800 mb-6">
           Brechas en la Adopción de Tecnologías 4.0
         </h2>
         <p class="text-gray-700 leading-relaxed mb-4 text-justify">
@@ -61,7 +61,7 @@
     <!-- Sección: Sectores Clave de la Economía Regional -->
     <section class="mb-12">
       <div class="bg-white py-2">
-        <h2 class="text-3xl font-bold text-gray-800 mb-6">
+        <h2 class="text-2xl font-bold text-gray-800 mb-6">
           Sectores Clave de la Economía Regional
         </h2>
         <p class="text-gray-700 leading-relaxed mb-4 text-justify">
@@ -84,7 +84,7 @@
     <!-- Sección: Fuente de Información -->
     <section class="mb-12">
       <div class="bg-white py-2">
-        <h2 class="text-3xl font-bold text-gray-800 mb-6">
+        <h2 class="text-2xl font-bold text-gray-800 mb-6">
           Fuente de Información
         </h2>
         <p class="text-gray-700 leading-relaxed mb-4 text-justify">
@@ -107,7 +107,7 @@
     <!-- Sección: Objetivo del Informe -->
     <section class="mb-12">
       <div class="bg-white py-2">
-        <h2 class="text-3xl font-bold text-gray-800 mb-6">
+        <h2 class="text-2xl font-bold text-gray-800 mb-6">
           Objetivo del Informe
         </h2>
         <p class="text-gray-700 leading-relaxed mb-4 text-justify">
