--- a/src/app/v2/modules/podcasts/podcasts.component.html
+++ b/src/app/v2/modules/podcasts/podcasts.component.html
@@ -1,60 +1,71 @@
 <!-- Migas de pan para navegación -->
 <app-breadcrumbs [breadcrumbs]="breadcrumbs"></app-breadcrumbs>
 
-<!-- Header -->
-
-<!-- forked from: https://codepen.io/cuonoj/pen/JjPmMaB -->
-
 <!-- Contenido principal -->
 <main class="container mx-auto py-12 flex flex-col lg:flex-row">
   <!-- Sección de búsqueda y resultados -->
   <div class="w-full lg:w-3/4 pr8 p-8">
-    <section class="mb-8">
-      <h1 class="text-3xl font-bold text-gray-800 mb-4">
-        Bienvenidos a la sección de Podcasts de Nuevo Los Lagos
-      </h1>
-      <p class="text-gray-700 leading-relaxed mb-4 text-justify">
-        Estamos emocionados de presentarte una forma innovadora de acceder a
-        información sobre las tecnologías de la Industria 4.0. Nuestros
-        podcasts, generados por inteligencia artificial, están basados en
-        nuestras investigaciones y conversaciones con expertos en áreas como
-        automatización, inteligencia artificial, Internet de las Cosas (IoT) y
-        más. Brindamos contenido accesible y actualizado, para que explores las
-        últimas tendencias de forma sencilla y directa. Disfruta del
-        conocimiento al alcance de un clic, en el formato que mejor se adapta a
-        ti.
-      </p>
+    <!-- Header -->
+    <header class="mb-12">
+      <div class="mx-auto py-4">
+        <h1 class="text-gray text-3xl font-bold">
+          Bienvenidos a la sección de Podcasts de Nuevo Los Lagos
+        </h1>
+        <p class="text-gray-700 mt-2 text-lg">
+          Estamos emocionados de presentarte una forma innovadora de acceder a
+          información sobre las tecnologías de la Industria 4.0.
+        </p>
+      </div>
+    </header>
+
+    <section class="mb-12">
+      <div class="bg-white py-2">
+        <h2 class="text-2xl font-bold text-gray-800 mb-6">Introducción</h2>
+        <p class="text-gray-700 leading-relaxed text-justify">
+          Nuestros podcasts, generados por inteligencia artificial, están
+          basados en nuestras investigaciones y conversaciones con expertos en
+          áreas como automatización, inteligencia artificial, Internet de las
+          Cosas (IoT) y más. Brindamos contenido accesible y actualizado, para
+          que explores las últimas tendencias de forma sencilla y directa.
+          Disfruta del conocimiento al alcance de un clic, en el formato que
+          mejor se adapta a ti.
+        </p>
+      </div>
     </section>
 
-    <section class="mb-8">
-      <h2 class="text-2xl font-bold text-gray-800 mb-4">
-        ¿Por qué hemos elegido el formato de podcast generado por IA?
-      </h2>
-      <p class="text-gray-700 leading-relaxed mb-4 text-justify">
-        Hemos optado por los podcasts generados por inteligencia artificial
-        porque creemos en ofrecer contenido de forma accesible y conveniente.
-        Este formato permite que nuestros usuarios accedan a información
-        relevante sobre tecnologías de la Industria 4.0, en cualquier momento y
-        lugar. Además, la inteligencia artificial garantiza la entrega rápida y
-        precisa de datos actualizados, haciéndolo una opción ideal para quienes
-        desean estar al día con las últimas tendencias sin invertir demasiado
-        tiempo.
-      </p>
+    <section class="mb-12">
+      <div class="bg-white py-2">
+        <h2 class="text-2xl font-bold text-gray-800 mb-6">
+          ¿Por qué hemos elegido el formato de podcast generado por IA?
+        </h2>
+        <p class="text-gray-700 leading-relaxed text-justify">
+          Hemos optado por los podcasts generados por inteligencia artificial
+          porque creemos en ofrecer contenido de forma accesible y conveniente.
+          Este formato permite que nuestros usuarios accedan a información
+          relevante sobre tecnologías de la Industria 4.0, en cualquier momento
+          y lugar. Además, la inteligencia artificial garantiza la entrega
+          rápida y precisa de datos actualizados, haciéndolo una opción ideal
+          para quienes desean estar al día con las últimas tendencias sin
+          invertir demasiado tiempo.
+        </p>
+      </div>
     </section>
 
-    <section>
-      <h2 class="text-2xl font-bold text-gray-800 mb-4">
-        ¿Cómo se desarrollan nuestros podcasts?
-      </h2>
-      <p class="text-gray-700 leading-relaxed text-justify">
-        Nuestros podcasts están basados en investigaciones detalladas y en
-        entrevistas con expertos del sector. Utilizamos tecnología de
-        inteligencia artificial avanzada para procesar esta información y
-        convertirla en episodios atractivos, informativos y fáciles de seguir.
-        Esto nos permite abordar temas complejos, como la automatización y el
-        Internet de las Cosas (IoT), de manera sencilla y comprensible para
-        todos.
-      </p>
+    <section class="mb-12">
+      <div class="bg-white py-2">
+        <h2 class="text-2xl font-bold text-gray-800 mb-6">
+          ¿Cómo se desarrollan nuestros podcasts?
+        </h2>
+        <p class="text-gray-700 leading-relaxed text-justify">
+          Nuestros podcasts están basados en investigaciones detalladas y en
+          entrevistas con expertos del sector. Utilizamos tecnología de
+          inteligencia artificial avanzada para procesar esta información y
+          convertirla en episodios atractivos, informativos y fáciles de seguir.
+          Esto nos permite abordar temas complejos, como la automatización y el
+          Internet de las Cosas (IoT), de manera sencilla y comprensible para
+          todos.
+        </p>
+      </div>
     </section>
 
     <!-- Sección: Lista de Podcasts -->
