imagenes cambiadas a webf

--- a/src/app/v2/components/patrocinadores/patrocinadores.component.html
+++ b/src/app/v2/components/patrocinadores/patrocinadores.component.html
@@ -38,7 +38,7 @@
         </div>
         <div class="flex items-center justify-center" key="centinela">
           <img
-            src="assets/logos/logo_centinela.png"
+            src="assets/logos/logo_centinela.webp"
             alt="grupo-centinela"
             style="max-height: 10rem"
             class="w-full max-w-xs h-auto object-contain"
