--- a/src/app/v2/components/breadcrumbs/breadcrumbs.component.html
+++ b/src/app/v2/components/breadcrumbs/breadcrumbs.component.html
@@ -11,6 +11,7 @@
           <ng-container *ngIf="!last; else lastBreadcrumb">
             <a
               [routerLink]="breadcrumb.url"
+              href="bewcrumb.url"
               class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-gray-500 transition-colors duration-300"
             >
               <!-- Icono de Inicio (solo para la primera miga de pan) -->
