--- a/src/app/v2/modules/evaluaciones-proveedor/evaluaciones-proveedor.component.html
+++ b/src/app/v2/modules/evaluaciones-proveedor/evaluaciones-proveedor.component.html
@@ -94,6 +94,7 @@
         <a
           style="cursor: pointer"
           routerLink="/registro-proveedor"
+          href="/registro-proveedor"
           class="inline-flex items-center justify-center px-5 py-3 mr-3 text-base font-medium text-center rounded-lg bg-primary hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 border border-yellow-500 border-3 hover:border-yellow-600 hover:bg-yellow-500"
         >
           Registrate como Proveedor
