--- a/src/app/v2/modules/landing-page/landing-page.component.html
+++ b/src/app/v2/modules/landing-page/landing-page.component.html
@@ -19,6 +19,7 @@
       </p>
       <a
         routerLink="/evaluaciones-madurez"
+        href="/evaluaciones-madurez"
         class="inline-flex items-center justify-center px-5 py-3 mr-3 text-base font-medium text-center rounded-lg bg-primary hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 border border-yellow-500 border-3 hover:border-yellow-600 hover:bg-yellow-500"
       >
         Evaluar Ahora
@@ -47,7 +48,11 @@
       class="grid gap-x-8 gap-y-12 sm:gap-y-16 md:grid-cols-2 lg:grid-cols-3"
     >
       <div class="relative mt-5 bg-gray-100 p-6 border">
-        <a routerLink="/registro-industria" class="block mb-3">
+        <a
+          routerLink="/registro-industria"
+          href="/registro-industria"
+          class="block mb-3"
+        >
           <h2 class="text-2xl font-bold leading-5 text-black">
             Registro Empresas
           </h2>
@@ -56,12 +61,20 @@
           ¿Formas parte de la Industria 4.0 y necesitas formación o proveedores
           para tu negocio?
         </p>
-        <a routerLink="/registro-industria" class="font-medium text-purple-600">
+        <a
+          routerLink="/registro-industria"
+          href="/registro-industria"
+          class="font-medium text-purple-600"
+        >
           Registrarse
         </a>
       </div>
       <div class="relative mt-5 bg-gray-100 p-6 border">
-        <a routerLink="/registro-proveedor" class="block mb-3">
+        <a
+          routerLink="/registro-proveedor"
+          href="/registro-proveedor"
+          class="block mb-3"
+        >
           <h2 class="text-2xl font-bold leading-5 text-black">
             Registro Proveedores
           </h2>
@@ -70,12 +83,20 @@
           ¿Quieres unirte a nuestra plataforma como proveedor de productos o
           servicios para la Industria 4.0?
         </p>
-        <a routerLink="/registro-proveedor" class="font-medium text-purple-600">
+        <a
+          routerLink="/registro-proveedor"
+          href="/registro-proveedor"
+          class="font-medium text-purple-600"
+        >
           Registrarse
         </a>
       </div>
       <div class="relative mt-5 bg-gray-100 p-6 border">
-        <a routerLink="/registro-persona" class="block mb-3">
+        <a
+          routerLink="/registro-persona"
+          href="/registro-persona"
+          class="block mb-3"
+        >
           <h2 class="text-2xl font-bold leading-5 text-black">
             Registro Usuarios
           </h2>
@@ -84,7 +105,11 @@
           ¿Te interesa conocer tendencias, innovaciones y mejores prácticas en
           la Industria 4.0, sin ser empresa o proveedor?
         </p>
-        <a routerLink="/registro-persona" class="font-medium text-purple-600">
+        <a
+          routerLink="/registro-persona"
+          href="/registro-persona"
+          class="font-medium text-purple-600"
+        >
           Registrarse
         </a>
       </div>
