--- a/src/app/v2/modules/login/login.component.html
+++ b/src/app/v2/modules/login/login.component.html
@@ -156,12 +156,14 @@
       <div class="flex flex-col space-y-4">
         <a
           routerLink="/registro"
+          href="/registro"
           class="w-full text-center mt-4 bg-indigo-600 hover:bg-indigo-400 text-white py-2 px-4 rounded-lg hover:bg-blue-600 focus:outline-none focus:ring"
         >
           Crear Cuenta
         </a>
         <a
           routerLink="/"
+          href="/"
           class="w-full text-center bg-white border border-gray-300 text-gray-900 py-2 px-4 rounded-lg hover:bg-gray-100 transition duration-300"
         >
           Volver
