--- a/src/app/v2/modules/selection-register/selection-register.component.html
+++ b/src/app/v2/modules/selection-register/selection-register.component.html
@@ -2,6 +2,7 @@
   <ol class="grid gap-4 md:grid-cols-3 p-6">
     <div
       routerLink="/registro-proveedor"
+      href="/registro-proveedor"
       class="group relative cursor-pointer overflow-hidden bg-white px-6 pt-10 pb-8 shadow-xl ring-1 ring-gray-900/5 transition-all duration-300 hover:-translate-y-1 hover:shadow-2xl sm:mx-auto sm:max-w-sm sm:rounded-lg sm:px-10"
     >
       <span
@@ -57,6 +58,7 @@
           <p>
             <a
               routerLink="/registro-proveedor"
+              href="/registro-proveedor"
               class="text-[rgb(31_41_55)] transition-all duration-300 group-hover:text-[rgb(234_179_8)]"
               >Registrarse &rarr;
             </a>
@@ -66,6 +68,7 @@
     </div>
     <div
       routerLink="/registro-industria"
+      href="/registro-industria"
       class="group relative cursor-pointer overflow-hidden bg-white px-6 pt-10 pb-8 shadow-xl ring-1 ring-gray-900/5 transition-all duration-300 hover:-translate-y-1 hover:shadow-2xl sm:mx-auto sm:max-w-sm sm:rounded-lg sm:px-10"
     >
       <span
@@ -115,6 +118,7 @@
           <p>
             <a
               routerLink="/registro-industria"
+              href="/registro-industria"
               class="text-[rgb(31_41_55)] transition-all duration-300 group-hover:text-[rgb(234_179_8)]"
               >Registrarse &rarr;
             </a>
@@ -124,6 +128,7 @@
     </div>
     <div
       routerLink="/registro-persona"
+      href="/registro-persona"
       class="group relative cursor-pointer overflow-hidden bg-white px-6 pt-10 pb-8 shadow-xl ring-1 ring-gray-900/5 transition-all duration-300 hover:-translate-y-1 hover:shadow-2xl sm:mx-auto sm:max-w-sm sm:rounded-lg sm:px-10"
     >
       <span
@@ -175,6 +180,7 @@
           <p>
             <a
               routerLink="/registro-persona"
+              href="/registro-persona"
               class="text-[rgb(31_41_55)] transition-all duration-300 group-hover:text-[rgb(234_179_8)]"
               >Registrarse &rarr;
             </a>
