--- a/src/app/v2/modules/form-register/form-register.component.html
+++ b/src/app/v2/modules/form-register/form-register.component.html
@@ -253,6 +253,7 @@
         <button
           type="button"
           routerLink="/registro"
+          href="/registro"
           style="gap: 6px; padding: 8px 16px"
           class="border border-blue-100 text-blue bg-blue-white hover:bg-white-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center"
         >
