--- a/src/app/v2/modules/evaluaciones-madurez/evaluaciones-madurez.component.html
+++ b/src/app/v2/modules/evaluaciones-madurez/evaluaciones-madurez.component.html
@@ -291,6 +291,7 @@
     >
       <div class="mr-auto place-self-center lg:col-span-7">
         <h1
+          rel="preload"
           class="max-w-2xl mb-5 text-4xl font-extrabold tracking-tight leading-none md:text-5xl xl:text-6xl"
         >
           Evaluación Nivel de Madurez Tecnológica
