--- a/src/app/v2/modules/evaluaciones-startup/evaluaciones-startup.component.html
+++ b/src/app/v2/modules/evaluaciones-startup/evaluaciones-startup.component.html
@@ -145,6 +145,7 @@
     >
       <div class="mr-auto place-self-center lg:col-span-7">
         <h1
+          rel="preload"
           class="max-w-2xl mb-5 text-4xl font-extrabold tracking-tight leading-none md:text-5xl xl:text-6xl"
         >
           Modelo de Formación para emprendedores
