--- a/src/app/v2/modules/landing-page/landing-page.component.html
+++ b/src/app/v2/modules/landing-page/landing-page.component.html
@@ -7,6 +7,7 @@
   >
     <div class="mr-auto place-self-center lg:col-span-7">
       <h1
+        rel="preload"
         class="max-w-2xl mb-5 text-4xl font-extrabold tracking-tight leading-none md:text-5xl xl:text-6xl"
       >
         Evaluación Nivel de Madurez Tecnológica
@@ -38,7 +39,13 @@
       </a>
     </div>
     <div class="hidden lg:mt-0 lg:col-span-5 lg:flex">
-      <img src="assets/hero.webp" alt="mockup" />
+      <img
+        src="assets/hero.webp"
+        alt="mockup"
+        loading="eager"
+        width="auto"
+        height="auto"
+      />
     </div>
   </div>
 </section>
@@ -133,7 +140,13 @@
         </a>
       </div>
       <div class="lg:w-1/4 lg:flex lg:justify-end hidden lg:block">
-        <img src="assets/podcast.webp" alt="Podcast" />
+        <img
+          src="assets/podcast.webp"
+          alt="Podcast"
+          width="auto"
+          height="auto"
+          loading="eager"
+        />
       </div>
     </div>
   </div>
