mejora performance landing footer

--- a/src/app/v2/components/footer/footer.component.html
+++ b/src/app/v2/components/footer/footer.component.html
@@ -5,8 +5,8 @@
   >
     <p>&copy; NuevoLosLagos 2024. Todos los derechos reservados.</p>
     <nav class="space-x-4 mt-4 md:mt-0">
-      <a class="hover:text-gray-400">Aviso legal</a>
-      <a class="hover:text-gray-400">Política de privacidad</a>
+      <p class="hover:text-gray-400">Aviso legal</p>
+      <p class="hover:text-gray-400">Política de privacidad</p>
     </nav>
   </div>
 </footer>
