--- a/src/app/v2/modules/landing-page/landing-page.component.html
+++ b/src/app/v2/modules/landing-page/landing-page.component.html
@@ -1,17 +1,13 @@
 <!-- Migas de pan para navegación -->
 <app-breadcrumbs [breadcrumbs]="breadcrumbs"></app-breadcrumbs>
 <!-- Contenido dinámico del sitio -->
+@defer {
 <section class="bg-white">
   <div
     class="grid container px-4 py-8 mx-auto lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12"
   >
     <div class="mr-auto place-self-center lg:col-span-7">
-      <h1
-        rel="preload"
-        class="max-w-2xl mb-5 text-4xl font-extrabold tracking-tight leading-none md:text-5xl xl:text-6xl"
-      >
-        Evaluación Nivel de Madurez Tecnológica
-      </h1>
+      <h1 class="titulo-principal">Evaluación Nivel de Madurez Tecnológica</h1>
       <p
         class="max-w-2xl mb-6 mt-4 font-light text-gray-500 lg:mb-8 md:text-lg lg:text-xl"
       >
@@ -49,6 +45,11 @@
     </div>
   </div>
 </section>
+}@placeholder {
+<p class="flex-center text-gray-400">Cargando ...</p>
+}
+<!---->
+@defer {
 <section>
   <div class="container pb-10 pt-5 mx-auto sm:px-12 md:px-16 lg:py-20 sm:py-16">
     <div
@@ -123,6 +124,11 @@
     </div>
   </div>
 </section>
+}@placeholder {
+<p class="flex-center text-gray-400">Cargando ...</p>
+}
+<!---->
+@defer {
 <section class="bg-yellow-500 py-10">
   <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="flex flex-col gap-12 lg:flex-row items-center">
@@ -151,6 +157,11 @@
     </div>
   </div>
 </section>
+}@placeholder {
+<p class="flex-center text-gray-400">Cargando ...</p>
+}
+<!---->
+@defer {
 <section>
   <div class="py-12 bg-white">
     <div class="container mx-auto px-4 sm:px-6 lg:px-8">
@@ -251,3 +262,6 @@
     </div>
   </div>
 </section>
+}@placeholder {
+<p class="flex-center text-gray-400">Cargando ...</p>
+}
