--- a/src/app/v2/modules/landing-page/landing-page.component.html
+++ b/src/app/v2/modules/landing-page/landing-page.component.html
@@ -7,7 +7,11 @@
     class="grid container px-4 py-8 mx-auto lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12"
   >
     <div class="mr-auto place-self-center lg:col-span-7">
-      <h1 class="titulo-principal">Evaluación Nivel de Madurez Tecnológica</h1>
+      <h1
+        class="max-w-2xl mb-5 text-4xl font-extrabold tracking-tight leading-none md:text-5xl xl:text-6xl"
+      >
+        Evaluación Nivel de Madurez Tecnológica
+      </h1>
       <p
         class="max-w-2xl mb-6 mt-4 font-light text-gray-500 lg:mb-8 md:text-lg lg:text-xl"
       >
@@ -45,7 +49,7 @@
     </div>
   </div>
 </section>
-}@placeholder {
+}@loading {
 <p class="flex-center text-gray-400">Cargando ...</p>
 }
 <!---->
@@ -124,7 +128,7 @@
     </div>
   </div>
 </section>
-}@placeholder {
+}@loading {
 <p class="flex-center text-gray-400">Cargando ...</p>
 }
 <!---->
@@ -157,7 +161,7 @@
     </div>
   </div>
 </section>
-}@placeholder {
+}@loading {
 <p class="flex-center text-gray-400">Cargando ...</p>
 }
 <!---->
@@ -262,6 +266,6 @@
     </div>
   </div>
 </section>
-}@placeholder {
+}@loading {
 <p class="flex-center text-gray-400">Cargando ...</p>
 }
