--- a/src/app/v2/modules/evaluaciones-startup/evaluaciones-startup.component.html
+++ b/src/app/v2/modules/evaluaciones-startup/evaluaciones-startup.component.html
@@ -144,11 +144,7 @@
       class="grid container px-4 py-8 mx-auto lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12"
     >
       <div class="mr-auto place-self-center lg:col-span-7">
-        <h1
-          class="max-w-2xl mb-5 text-4xl font-extrabold tracking-tight leading-none md:text-5xl xl:text-6xl"
-        >
-          Modelo de Formación para emprendedores
-        </h1>
+        <h1 class="titulo-principal">Modelo de Formación para emprendedores</h1>
         <p
           class="max-w-2xl mb-6 mt-4 font-light text-gray-500 lg:mb-8 md:text-lg lg:text-xl"
         >
