estilos tailwind mejora rendimiento

--- a/src/app/v2/components/footer/footer.component.html
+++ b/src/app/v2/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <!-- Pie de página -->
-<footer class="bg-[#262626] text-white py-8 border-t-4 border-yellow-500">
+<footer class="bg-[#262626] text-white p-4 border-t-4 border-yellow-500">
   <div
     class="container mx-auto flex flex-col md:flex-row justify-between items-center"
   >
