--- a/src/app/v2/modules/landing-page/landing-page.component.html
+++ b/src/app/v2/modules/landing-page/landing-page.component.html
@@ -2,122 +2,21 @@
 <app-breadcrumbs [breadcrumbs]="breadcrumbs"></app-breadcrumbs>
 <!-- Contenido dinámico del sitio -->
 <section class="bg-white">
-  <div
-    class="grid container px-4 py-8 mx-auto lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12"
+  <app-title-section
+    [title]="'Evaluación Nivel de Madurez Tecnológica.'"
+    [description]="
+      'Evalua el nivel de madurez tecnológica de tu empresa y conoce que acciones debes realizar para alcanzar la madurez tecnológica.'
+    "
+    [buttonText]="'Evaluar Ahora'"
+    [buttonLink]="'/evaluaciones-madurez'"
+    [imageSrc]="'assets/hero.webp'"
+    [imageAlt]="'mockup'"
   >
-    <div class="mr-auto place-self-center lg:col-span-7">
-      <h1 class="titulo-principal">Evaluación Nivel de Madurez Tecnológica</h1>
-      <p
-        class="max-w-2xl mb-6 mt-4 font-light text-gray-500 lg:mb-8 md:text-lg lg:text-xl"
-      >
-        Evalua el nivel de madurez tecnológica de tu empresa y conoce que
-        acciones debes realizar para alcanzar la madurez tecnológica
-      </p>
-      <a
-        routerLink="/evaluaciones-madurez"
-        href="/evaluaciones-madurez"
-        class="inline-flex items-center justify-center px-5 py-3 mr-3 text-base font-medium text-center rounded-lg bg-primary hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 border border-yellow-500 border-3 hover:border-yellow-600 hover:bg-yellow-500"
-      >
-        Evaluar Ahora
-        <svg
-          class="w-5 h-5 ml-2 -mr-1"
-          fill="currentColor"
-          viewBox="0 0 20 20"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            fill-rule="evenodd"
-            d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z"
-            clip-rule="evenodd"
-          ></path>
-        </svg>
-      </a>
-    </div>
-    <div class="hidden lg:mt-0 lg:col-span-5 lg:flex">
-      <img
-        src="assets/hero.webp"
-        alt="mockup"
-        loading="eager"
-        width="auto"
-        height="auto"
-      />
-    </div>
-  </div>
+  </app-title-section>
 </section>
-<section>
-  <div class="container pb-10 pt-5 mx-auto sm:px-12 md:px-16 lg:py-20 sm:py-16">
-    <div
-      class="grid gap-x-8 gap-y-12 sm:gap-y-16 md:grid-cols-2 lg:grid-cols-3"
-    >
-      <div class="relative mt-5 bg-gray-100 p-6 border">
-        <a
-          routerLink="/registro-industria"
-          href="/registro-industria"
-          class="block mb-3"
-        >
-          <h2 class="text-2xl font-bold leading-5 text-black">
-            Registro Empresas
-          </h2>
-        </a>
-        <p class="mb-4 text-gray-700">
-          ¿Formas parte de la Industria 4.0 y necesitas formación o proveedores
-          para tu negocio?
-        </p>
-        <a
-          routerLink="/registro-industria"
-          href="/registro-industria"
-          class="font-medium text-purple-600"
-        >
-          Registrarse
-        </a>
-      </div>
-      <div class="relative mt-5 bg-gray-100 p-6 border">
-        <a
-          routerLink="/registro-proveedor"
-          href="/registro-proveedor"
-          class="block mb-3"
-        >
-          <h2 class="text-2xl font-bold leading-5 text-black">
-            Registro Proveedores
-          </h2>
-        </a>
-        <p class="mb-4 text-gray-700">
-          ¿Quieres unirte a nuestra plataforma como proveedor de productos o
-          servicios para la Industria 4.0?
-        </p>
-        <a
-          routerLink="/registro-proveedor"
-          href="/registro-proveedor"
-          class="font-medium text-purple-600"
-        >
-          Registrarse
-        </a>
-      </div>
-      <div class="relative mt-5 bg-gray-100 p-6 border">
-        <a
-          routerLink="/registro-persona"
-          href="/registro-persona"
-          class="block mb-3"
-        >
-          <h2 class="text-2xl font-bold leading-5 text-black">
-            Registro Usuarios
-          </h2>
-        </a>
-        <p class="mb-4 text-gray-700">
-          ¿Te interesa conocer tendencias, innovaciones y mejores prácticas en
-          la Industria 4.0, sin ser empresa o proveedor?
-        </p>
-        <a
-          routerLink="/registro-persona"
-          href="/registro-persona"
-          class="font-medium text-purple-600"
-        >
-          Registrarse
-        </a>
-      </div>
-    </div>
-  </div>
-</section>
+<!--Section registro-->
+<app-selection-register></app-selection-register>
+<!-- Section podcasts-->
 <section class="bg-yellow-500 py-10">
   <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="flex flex-col gap-12 lg:flex-row items-center">
@@ -146,6 +45,7 @@
     </div>
   </div>
 </section>
+<!-- Section nuevo los lagos-->
 <section>
   <div class="py-12 bg-white">
     <div class="container mx-auto px-4 sm:px-6 lg:px-8">
@@ -172,71 +72,61 @@
       </div>
       <!-- Grid de características -->
       <div class="mt-10">
-        <dl
-          class="space-y-10 md:space-y-0 md:grid md:grid-cols-2 md:gap-x-8 md:gap-y-10"
-        >
-          <div class="relative border-l-2 border-gray-200 p-2">
-            <div class="flex items-center">
-              <p class="text-lg leading-6 font-bold text-gray-700">
-                Buscador Proveedores
-              </p>
+        <dl class="feature-grid">
+          <div class="feature-item">
+            <div class="feature-item-title">
+              <p class="feature-item-heading">Buscador Proveedores</p>
             </div>
-            <div class="mt-2 text-lg text-gray-500">
+            <div class="feature-item-description">
               Herramienta para conectar empresas y proveedores de la industria
               en la región de Los Lagos.
             </div>
           </div>
-          <div class="relative border-l-2 border-gray-200 p-2">
-            <div class="flex items-center">
-              <p class="text-lg leading-6 font-bold text-gray-700">
-                Buscador de Cursos I 4.0
-              </p>
+          <div class="feature-item">
+            <div class="feature-item-title">
+              <p class="feature-item-heading">Buscador de Cursos I 4.0</p>
             </div>
-            <div class="mt-2 text-lg text-gray-500">
+            <div class="feature-item-description">
               Plataforma para busqueda de cursos especializados en Industria 4.0
               para el desarrollo de profesionales.
             </div>
           </div>
-          <div class="relative border-l-2 border-gray-200 p-2">
-            <div class="flex items-center">
-              <p class="text-lg leading-6 font-bold text-gray-700">
-                Artículos de interés
-              </p>
+          <div class="feature-item">
+            <div class="feature-item-title">
+              <p class="feature-item-heading">Artículos de interés</p>
             </div>
-            <div class="mt-2 text-lg text-gray-500">
+            <div class="feature-item-description">
               Compendio de artículos relevantes sobre Industria 4.0, enfocados
               en ofrecer información útil a las empresas.
             </div>
           </div>
-          <div class="relative border-l-2 border-gray-200 p-2">
-            <div class="flex items-center">
-              <p class="text-lg leading-6 font-bold text-gray-700">
-                Proyectos destacados
-              </p>
+          <div class="feature-item">
+            <div class="feature-item-title">
+              <p class="feature-item-heading">Proyectos destacados</p>
             </div>
-            <div class="mt-2 text-lg text-gray-500">
+            <div class="feature-item-description">
               Selección de proyectos sobresalientes en Industria 4.0, con
               información relevante para el sector empresarial.
             </div>
           </div>
-          <div class="relative border-l-2 border-gray-200 p-2">
-            <div class="flex items-center">
-              <p class="text-lg leading-6 font-bold text-gray-700">
+          <div class="feature-item">
+            <div class="feature-item-title">
+              <p class="feature-item-heading">
                 Investigaciones sobre la Industria Regional
               </p>
             </div>
-            <div class="mt-2 text-lg text-gray-500">
+            <div class="feature-item-description">
               Acceso a investigaciones y estudios que analizan el impacto y
               desarrollo de la industria en la región de Los Lagos.
             </div>
           </div>
-          <div class="relative border-l-2 border-gray-200 p-2">
-            <div class="flex items-center">
-              <p class="text-lg leading-6 font-bold text-gray-700">
+          <div class="feature-item">
+            <div class="feature-item-title">
+              <p class="feature-item-heading">
                 Contenido Exclusivo en Industria 4.0
               </p>
             </div>
-            <div class="mt-2 text-lg text-gray-500">
+            <div class="feature-item-description">
               Recursos especializados y contenido exclusivo sobre tendencias,
               innovaciones y mejores prácticas en Industria 4.0.
             </div>
