--- a/src/app/v2/components/footer/footer.component.html
+++ b/src/app/v2/components/footer/footer.component.html
@@ -1,12 +1,10 @@
 <!-- Pie de página -->
 <footer class="bg-[#262626] text-white p-4 border-t-4 border-yellow-500">
   <div
-    class="container mx-auto flex flex-col md:flex-row justify-between items-center"
+    class="container mx-auto flex text-center justify-center flex-col md:flex-row gap-4 items-center"
   >
     <p>&copy; NuevoLosLagos 2024. Todos los derechos reservados.</p>
-    <nav class="space-x-4 mt-4 md:mt-0">
-      <p class="hover:text-gray-400">Aviso legal</p>
-      <p class="hover:text-gray-400">Política de privacidad</p>
-    </nav>
+    <p class="hover:text-gray-400">Aviso legal</p>
+    <p class="hover:text-gray-400">Política de privacidad</p>
   </div>
 </footer>
