sitemap,meta decription in selection

--- a/src/app/v2/modules/landing-page/landing-page.component.html
+++ b/src/app/v2/modules/landing-page/landing-page.component.html
@@ -15,7 +15,7 @@
   </app-title-section>
 </section>
 <!--Section registro-->
-<app-selection-register></app-selection-register>
+<app-selection-register [changeMeta]="false"></app-selection-register>
 <!-- Section podcasts-->
 <section class="bg-yellow-500 py-10">
   <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
