less warning console

--- a/src/app/v2/modules/landing-page/landing-page.component.html
+++ b/src/app/v2/modules/landing-page/landing-page.component.html
@@ -33,7 +33,7 @@
           >Ir a Escuchar
         </a>
       </div>
-      <div class="lg:w-1/4 lg:flex lg:justify-end hidden lg:block">
+      <div class="lg:w-1/4 lg:flex lg:justify-end hidden">
         <img
           src="assets/podcast.webp"
           alt="Podcast"
