--- a/src/app/v2/components/title-section/title-section.component.html
+++ b/src/app/v2/components/title-section/title-section.component.html
@@ -3,9 +3,9 @@
     <h1 class="titulo-principal">
       {{ title }}
     </h1>
-    <p class="hero-description">
+    <h2 class="hero-description">
       {{ description }}
-    </p>
+    </h2>
     <a
       [routerLink]="buttonLink"
       [href]="buttonLink"
