--- a/src/app/v2/modules/form-register/form-register.component.html
+++ b/src/app/v2/modules/form-register/form-register.component.html
@@ -6,7 +6,7 @@
 >
   <div class="grid grid-cols-1 md:grid-cols-12">
     <div class="bg-gray-900 md:col-span-4 p-10 text-white">
-      <p class="mt-4 text-sm leading-7 font-regular uppercase">
+      <h1 class="mt-4 text-sm leading-7 font-regular uppercase">
         Registro |
         {{
           tipoRegistro === "proveedor"
@@ -15,7 +15,7 @@
             ? "Industria 4.0"
             : "Startup - Emprendedor"
         }}
-      </p>
+      </h1>
       <h3
         class="text-3xl sm:text-4xl leading-normal font-extrabold tracking-tight"
       >
