descripciones de  img faltantes

--- a/src/app/v2/modules/proyecto-plataforma/proyecto-plataforma.component.html
+++ b/src/app/v2/modules/proyecto-plataforma/proyecto-plataforma.component.html
@@ -55,7 +55,7 @@
         </li>
       </ul>
     </section>
-    <img src="assets/image1.svg" alt="Descripción de la imagen" class="w-2/3" />
+    <img src="assets/image1.svg" alt="Desafíos y Brechas img Descripción" class="w-2/3" />
     <section class="my-8 text-justify bg-gray-100 p-3">
       <h2 class="text-3xl font-semibold text-gray-800">Desafíos y Brechas</h2>
       <h3 class="mt-4 text-2xl font-medium text-gray-800">Desafíos</h3>
@@ -75,7 +75,7 @@
     </section>
     <img
       src="assets/componentesnllgs.svg"
-      alt="Descripción de la imagen"
+      alt="Descripción manufactura avanzada img"
       class="w-2/3"
     />
     <section class="my-8 text-justify bg-gray-100 p-3">
