--- a/src/app/v2/modules/login/login.component.html
+++ b/src/app/v2/modules/login/login.component.html
@@ -154,10 +154,12 @@
 
       <!-- Additional Buttons -->
       <div class="flex flex-col space-y-4">
+
+        
         <a
           routerLink="/registro"
           href="/registro"
-          class="w-full text-center mt-4 bg-indigo-600 hover:bg-indigo-400 text-white py-2 px-4 rounded-lg hover:bg-blue-600 focus:outline-none focus:ring"
+          class="w-full text-center mt-4 bg-indigo-600 text-white py-2 px-4 rounded-lg hover:bg-blue-600 focus:outline-none focus:ring"
         >
           Crear Cuenta
         </a>
